syntax = "proto3";
package protobuf;
import "google/protobuf/timestamp.proto";

message User {
  string id = 1;
  string email = 2;
  google.protobuf.Timestamp createdAt = 3;
  google.protobuf.Timestamp updatedAt = 4;
  bool verified = 5;
  string authToken = 6;
}
